--- a/package.json
+++ b/package.json
@@ -21,8 +21,11 @@
   "devDependencies": {
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
-    "@types/node": "^16.6.1",
+    "@types/node": "^17.0.5",
     "@types/sequelize": "^4.28.10",
-    "@types/validator": "^13.6.3"
+    "@types/validator": "^13.6.3",
+    "nodemon": "^2.0.15",
+    "ts-node-dev": "^1.1.8",
+    "typescript": "^4.5.4"
   }
 }
